[fix][ui] about dialog Icon cutoff in safari fix #12144 env 10.78.96.167 Signed-off-by: Yogi_Wang <yawang@vmware.com>

--- a/src/portal/src/css/dark-theme.scss
+++ b/src/portal/src/css/dark-theme.scss
@@ -26,4 +26,7 @@ $color-657b83: none;
 $color-fdf6e3:  none;
 $header-color: hsl(198, 100%, 15%)!important;
 
+$harbor-icon-translate-x: 0;
+$harbor-icon-drop-shadow-x: 58px;
+
 @import "./common.scss";
